--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 VITE_CURRENCY = $
-VITE_BACKEND_URL = http://localhost:3000
-VITE_CLERK_PUBLISHABLE_KEY = #------- clerk publishable key -------#
+VITE_BACKEND_URL = https://quick-stay-full-stack-psi.vercel.app
+VITE_CLERK_PUBLISHABLE_KEY = pk_test_aGFybWxlc3MtZ3JpenpseS0xNS5jbGVyay5hY2NvdW50cy5kZXYk
